--- a/style.css
+++ b/style.css
@@ -183,7 +183,6 @@ h2 {
 
 #particles{
     width: 100%;
-    height: 100%;
     position: absolute;
     top: 600;
     left: 0;
@@ -194,6 +193,19 @@ h2 {
 }
 
 .Courses {
+    position:absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.upperbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.bottombox {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -203,6 +215,7 @@ h2 {
 .box {
     display: block;
     margin: 50px auto;
+    margin-right: 10px;
     padding-top: 20px;
     text-decoration: none;
     width: 240px;
