--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-/*
-img {
-    float: left;
-}
-*/
 
 @font-face {
     /*フォントの名前*/
@@ -28,31 +23,6 @@ header {
     background-size: cover;
 }
 
-header nav {
-    float: right;
-    width: 600px;
-    height: 36px;
-}
-
-ul {
-     overflow: hidden;
-    margin: 0 50px;
-/*
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin-right: 35px;
-    margin-top: 30px;
-    margin-bottom: 5px;
-*/
-}
-
-ul li {
-    list-style-type: none;
-    float: left;
-/*    margin-right: 30px;*/
-}
-
 nav {
     position: absolute;
     top: 0;
@@ -74,24 +44,16 @@ nav a {
     font-size: 20pt;
     font-weight: 300;
 }
-/*
 
-nav a {
-    display: block;
-    text-decoration: none;
-    color: #fff;
-    font-weight: 300;
-    font-size: 20pt;
-    transition: 0.5s;
-    font-family: Futura;
+ul {
+     overflow: hidden;
+    margin: 0 50px;
 }
 
-@media (max-width:450px) {
-    nav a {
-        font-size: 0pt;
-    }
+ul li {
+    list-style-type: none;
+    float: left;
 }
-*/
 
 nav a:hover {
     color: #3D5CDB;
@@ -101,11 +63,14 @@ nav a:hover {
     position: absolute;
     top:50%;
     left:50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit-transform: translateY(-50%) translateX(-50%);
 }
 
 .logo img {
     width: 900px;
     margin:auto;
+    
 }@media (max-width:450px) {
     .logo img {
         width: 70vw;
@@ -141,7 +106,7 @@ nav a:hover {
     /*縦並び*/
     justify-content: center;
     /*中央よせ*/
-    align-content: space-between;
+    align-content: space-around;
 }
 
 
@@ -152,36 +117,65 @@ h2 {
     font-family: Futura;
     font-weight: 200;
     padding-top: 40px;
+}@media (max-width:450px){
+    h2{
+        font-size:200%;
+        padding-bottom: 20px;
+    }
 }
 
 .rightbox {
     display: flex;
     justify-content: space-around;
     align-content: center;
-    margin-top: 60px;
     margin-bottom: 0px;
     /*    border-style: solid; border-width: 1px;*/
+}@media (max-width:450px){
+    .rightbox{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
 }
 
 .rightbox img {
     float: left;
     width: 500px;
     height: 330px;
+}@media(max-width:450px){
+    .rightbox img{
+        width:100%;
+    object-fit: contain;
+        padding:0 10px;
+    }
 }
 
 .leftbox {
     display: flex;
     justify-content: space-around;
     align-content: center;
-    margin-top: 90px;
     height: 330px;
     margin-bottom: 70px;
+}@media (max-width:450px){
+    .leftbox{
+        height:100vh;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        margin:0;
+    }
 }
 
 .leftbox img {
     float: left;
     width: 500px;
     height: 330px;
+}@media(max-width:450px){
+    .leftbox img{
+        width:100%;
+    object-fit: contain;
+    }
 }
 
 .content {
@@ -191,7 +185,12 @@ h2 {
     align-content: space-around;
     width: 400px;
     height: 250px;
-    padding-left: 20px;
+    padding: 20px;
+}@media(max-width:450px){
+    .content{
+        padding:0px;
+        width:100vw;
+    }
 }
 
 .content p {
@@ -201,7 +200,14 @@ h2 {
     line-height: 20px;
     margin: 15px auto 20px;
     padding-top: 15px;
-    border-width: 3px;
+}@media(max-width:450px){
+    .content p{
+        font-size: 100%;
+        width:90%;
+        margin:0 0 0 20px;
+    font-family: 'Hiragino Kaku Gothic Pro';
+        
+    }
 }
 
 .content a {
